SCANCLI-180 Change compilation to target Java 11